--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "scrobbli",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
@@ -52,5 +52,5 @@
   "bugs": {
     "url": "https://github.com/SmatMan/Scrobbli/issues"
   },
-  "homepage": "https://github.com/SmatMan/Scrobbli#readme"
+  "homepage": "."
 }
